--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,13 +20,20 @@ dependencies:
   flutter:
     sdk: flutter
 
+
+
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
+  http: ^0.11.3+17
+  sqflite: any
+  #获取应用的文件存储路径
+  path_provider: ^0.4.1
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+
 
 
 # For information on the generic Dart part of this file, see the
